--- a/Node_JS_basic/package.json
+++ b/Node_JS_basic/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "chai-http": "^4.3.0",
     "csv-parse": "^5.6.0",
+    "csv-parser": "^3.2.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
